no voy a pasar, amen

--- a/resena.html
+++ b/resena.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css2.css">
+    <link rel="stylesheet" href="css2.css">
     <title>Análisis</title>
 </head>
 
@@ -18,14 +18,14 @@
     </div>
 
     <div class="contenedor_yo">
-        <img src="../old-books-436498.jpg" alt="">
+        <img src="old-books-436498.jpg" alt="">
         <div class="texto_yo">
             <p>Hola, soy</p>
             <h2>Josias Peguero</h2>
             <p>actualmente tengo 17 años de edad, soy del liceo tecnico José Nuñez de Cáceres, actualmente
                 estoy cursando el sexto de secundaria.</p>
                 <p><strong>Contacto:</strong> josiaspegueroltjnc@gmail.com</p>
-            <a href="./book.html"> <button>Ver Análisis</button></a>
+            <a href="book.html"> <button>Ver Análisis</button></a>
         </div>
     </div>
 </body>
