--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css.css">
+    <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,11 +15,11 @@
 <body>
     <div class="contenedor">
         <div class="portada">
-            <img src="src/old-books-436498.jpg" alt="">
+            <img src="old-books-436498.jpg" alt="">
         </div>
         <div class="descripcion">
             <h1>Lee, Escribe y Analiza</h1>
-            <a href="/src/pages/resena.html"><button>Ver Análisis</button></a>
+            <a href="resena.html"><button>Ver Análisis</button></a>
         </div>
     </div>
 
